--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+        <!-- 自己的其他模块 -->
+        <dependency>
+            <groupId>me.zhengjie</groupId>
+            <artifactId>test-con</artifactId>
+            <version>2.4</version>
+        </dependency>
+
         <!-- 代码生成模块 -->
         <dependency>
             <groupId>me.zhengjie</groupId>
@@ -85,6 +92,12 @@
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
             <version>5.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>me.zhengjie</groupId>
+            <artifactId>test-xyz</artifactId>
+            <version>2.4</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
