--- a/test-cal/pom.xml
+++ b/test-cal/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>test-con</artifactId>
-    <name>test-con模块</name>
+    <artifactId>test-cal</artifactId>
+    <name>cal模块</name>
 
 
 </project>
