--- a/test-xyz/pom.xml
+++ b/test-xyz/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>eladmin-system</artifactId>
+        <artifactId>eladmin</artifactId>
         <groupId>me.zhengjie</groupId>
         <version>2.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>el-sys-chil</artifactId>
+    <artifactId>test-xyz</artifactId>
 
 
 </project>
