--- a/test-con02/pom.xml
+++ b/test-con02/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>test-con02</artifactId>
     <name>test-con02模块</name>
+    <dependencies>
+        <dependency>
+            <groupId>me.zhengjie</groupId>
+            <artifactId>eladmin-logging</artifactId>
+            <version>2.4</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
