--- a/test-con/pom.xml
+++ b/test-con/pom.xml
@@ -12,5 +12,14 @@
     <artifactId>test-con</artifactId>
     <name>test-con-python连接模块</name>
 
+    <dependencies>
+        <!-- tools 模块包含了 common 和 logging 模块 -->
+        <dependency>
+            <groupId>me.zhengjie</groupId>
+            <artifactId>eladmin-tools</artifactId>
+            <version>2.4</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
